@@ -434,6 +434,52 @@ package body XE_Back is
                raise Parsing_Error;
             end if;
 
+         when Attribute_Permanent =>
+
+            --  Only booleans are allowed.
+
+            if Get_Variable_Type (Attribute_Item) /= Boolean_Type_Node then
+               Write_SLOC (Node_Id (Attribute_Item));
+               Write_Name (Partitions.Table (Partition).Name);
+               Write_Str  ("'s permanent attribute must be of boolean type");
+               Write_Eol;
+               raise Parsing_Error;
+            end if;
+
+            --  Does it apply to all partitions ? Therefore, check
+            --  that this has not already been done.
+
+            if Partition = Null_PID and then
+              Default_Permanent = Unknown then
+               if Convert (Get_Variable_Mark (Attribute_Item)) = True then
+                  Default_Permanent := Yes;
+               else
+                  Default_Permanent := No;
+               end if;
+
+            --  Apply to one partition. Check that it has not already
+            --  been done.
+
+            elsif Partition /= Null_PID and then
+              Partitions.Table (Partition).Permanent = Unknown then
+               if Convert (Get_Variable_Mark (Attribute_Item)) = True then
+                  Partitions.Table (Partition).Permanent := Yes;
+               else
+                  Partitions.Table (Partition).Permanent := No;
+               end if;
+
+            else
+               Write_SLOC (Node_Id (Attribute_Item));
+               if Partition = Null_PID then
+                  Write_Str ("type partition");
+               else
+                  Write_Name (Partitions.Table (Partition).Name);
+               end if;
+               Write_Str ("'s command_line attribute has been assigned twice");
+               Write_Eol;
+               raise Parsing_Error;
+            end if;
+
          when Attribute_Unknown =>
             null;
 
